--- a/.github/workflows/master_api-salesunity.yml
+++ b/.github/workflows/master_api-salesunity.yml
@@ -27,6 +27,13 @@ jobs:
       - name: Build with Gradle
         run: ./gradlew build
 
+
+      - name: Archive build artifacts
+        uses: actions/upload-artifact@v2
+        with:
+          name: my-artifact
+          path: path/to/artifact/directory
+          
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v3
         with:
