--- a/.github/workflows/master_api-salesunity.yml
+++ b/.github/workflows/master_api-salesunity.yml
@@ -54,7 +54,7 @@ jobs:
       - name: Download artifact from build job
         uses: actions/download-artifact@v3
         with:
-          name: java-app
+          name: systemapp
       
       - name: Login to Azure
         uses: azure/login@v1
