--- a/.github/workflows/master_api-salesunity.yml
+++ b/.github/workflows/master_api-salesunity.yml
@@ -63,5 +63,5 @@ jobs:
         with:
           app-name: 'API-SalesUnity'
           slot-name: 'Production'
-          package: '*.jar'
+          package: '${{ github.workspace }}/build/libs/*.jar'
           
